[package]
name = "how-to-learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.16", features = ["derive", "wrap_help"] }
dotenv = { version = "0.15.0", features = ["clap"] }
reqwest = { version = "0.11.18", features = ["json", "blocking", "gzip", "deflate"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_with = { version = "3.1.0", features = ["json"] }
